force-app/main/default/objects/Funding_Self_Evaluation__c/Funding_Self_Evaluation__c.object-meta.xml
<CustomObject>
    <description>Object to store the details captured from the self evaluation form for funding awards</description>
    <label>Funding Self Evaluation</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Funding Self Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Self Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>