force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Apprentices_Constr_Installation_Ops__c.field-meta.xml
<CustomField>
    <fullName>Apprentices_Constr_Installation_Ops__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many construction or installation (operatives) apprentices employed within own organisation as part of Wave 3 so far</description>
    <inlineHelpText>How many construction or installation (operatives) apprentices employed within own organisation as part of Wave 3 so far</inlineHelpText>
    <label>Apprentices - Constr/Installation Ops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>