force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Apprentices_Don_t_know__c.field-meta.xml
<CustomField>
    <fullName>Apprentices_Don_t_know__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many don&apos;t know apprentices employed within own organisation as part of Wave 3 so far</description>
    <inlineHelpText>How many don&apos;t know apprentices employed within own organisation as part of Wave 3 so far</inlineHelpText>
    <label>Apprentices - Don’t know</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>