force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Apprentices_Eng_Design_Assmts__c.field-meta.xml
<CustomField>
    <fullName>Apprentices_Eng_Design_Assmts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many engineering, design or assessments apprentices employed within own organisation as part of Wave 3 so far</description>
    <inlineHelpText>How many engineering, design or assessments apprentices employed within own organisation as part of Wave 3 so far</inlineHelpText>
    <label>Apprentices - Eng/Design/Assmts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>