force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Apprentices_Further_Information__c.field-meta.xml
<CustomField>
    <fullName>Apprentices_Further_Information__c</fullName>
    <defaultValue>&quot;Enter Text&quot;</defaultValue>
    <description>Any further detail or context you wish to support this information about apprentices</description>
    <inlineHelpText>Any further detail or context you wish to support this information about apprentices</inlineHelpText>
    <label>Apprentices - Further Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>