force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Apprentices_Other_eg_Proj_Mgmt_Admin__c.field-meta.xml
<CustomField>
    <fullName>Apprentices_Other_eg_Proj_Mgmt_Admin__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many other apprentices employed within own organisation as part of Wave 3 so far. (e.g., Project Management or Administration)</description>
    <inlineHelpText>How many other apprentices employed within own organisation as part of Wave 3 so far. (e.g., Project Management or Administration)</inlineHelpText>
    <label>Apprentices - Other (eg.Proj Mgmt/Admin)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>