force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Apprentices_Site_Management__c.field-meta.xml
<CustomField>
    <fullName>Apprentices_Site_Management__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many site management apprentices employed within own organisation as part of Wave 3 so far</description>
    <inlineHelpText>How many site management apprentices employed within own organisation as part of Wave 3 so far</inlineHelpText>
    <label>Apprentices - Site Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>