force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <description>Date form was created</description>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>