force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Mgrs_Dirs_Sr_Officials__c.field-meta.xml
<CustomField>
    <fullName>FTE_Mgrs_Dirs_Sr_Officials__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - % of managers, directors or senior officials (SOC Code 11)</description>
    <inlineHelpText>Estimated percentage of managers, directors or senior officials directly involved in delivering Wave 3 project so far. For example: chief executives, production managers and directors (SOC Code 11)</inlineHelpText>
    <label>FTE Post - % Mgrs/Dirs/Sr Officials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>