force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_Admin_Sales_Cust_Serv_Ops__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_Admin_Sales_Cust_Serv_Ops__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - % of administrative, sales and customer service, or process, plant &amp; machine operatives (SOC Codes 4, 71, 8)</description>
    <inlineHelpText>Estimated percentage of  administrative, sales and customer service, or process, plant and machine operatives directly involved in delivering Wave 3 project so far. For example: office managers, secretaries, machine drivers (SOC Codes 4, 71, 8)</inlineHelpText>
    <label>FTE Post - % Admin/Sales/Cust Serv/Ops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>