force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_Assoc_Prof_Bus_Eng_etc__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_Assoc_Prof_Bus_Eng_etc__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - % of business, public service, engineering &amp; technology associate professionals (SOC Codes 31-35)</description>
    <inlineHelpText>Estimated percentage of business, public service, engineering and technology associate professionals directly involved in delivering Wave 3 project so far. For example: data analysts, sales and marketing executives, project support officers, account managers (SOC Codes 31-35)</inlineHelpText>
    <label>FTE Post - % Assoc Prof (Bus/Eng/etc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>