force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_Bus_Pub_Eng_Tech_Prof__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_Bus_Pub_Eng_Tech_Prof__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - % of business, public service, engineering &amp; technology professionals (SOC Codes 21-24)</description>
    <inlineHelpText>Estimated percentage of business, public service, engineering and technology professionals directly involved in delivering Wave 3 project so far. For example: R&amp;D, IT, legal, finance, project management or chartered professionals (SOC Codes 21-24)</inlineHelpText>
    <label>FTE Post - % Bus/Pub/Eng/Tech Prof</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>