force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_No_Admin_Sales_Cust_Serv_Ops__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_No_Admin_Sales_Cust_Serv_Ops__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - No. of administrative, sales and customer service, or process, plant &amp; machine operatives (SOC Codes 4, 71, 8)</description>
    <inlineHelpText>Of these FTE posts, how many are in administrative, sales and customer service, or process, plant and machine operatives? For example: office managers, secretaries, machine drivers (SOC Codes 4, 71, 8)</inlineHelpText>
    <label>FTE Post - No. Admin/Sales/Cust Serv/Ops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>