force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_No_Assoc_Prof_Bus_Eng_Etc__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_No_Assoc_Prof_Bus_Eng_Etc__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - No. of business, public service, engineering &amp; technology associate professionals (SOC Codes 31-35)</description>
    <inlineHelpText>Of these FTE posts, how many are business, public service, engineering and technology associate professionals? For example: data analysts, sales and marketing executives, project support officers, account managers (SOC Codes 31-35)</inlineHelpText>
    <label>FTE Post - No. Assoc Prof (Bus/Eng/Etc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>