force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_No_Bus_Pub_Eng_Tech_Prof__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_No_Bus_Pub_Eng_Tech_Prof__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - No. of business, public service, engineering &amp; technology professionals (SOC Codes 21-24)</description>
    <inlineHelpText>Of these FTE posts, how many are business, public service, engineering and technology professionals? For example: R&amp;D, IT, legal, finance, project management or chartered professionals (SOC Codes 21-24)</inlineHelpText>
    <label>FTE Post - No. Bus/Pub/Eng/Tech Prof</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>