force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_No_Mgrs_Dirs_Sr_Officials__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_No_Mgrs_Dirs_Sr_Officials__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - No. of managers, directors or senior officials (SOC Code 11)</description>
    <inlineHelpText>Of these FTE posts, how many are managers, directors or senior officials? For example: chief executives, production managers and directors (SOC Code 11)</inlineHelpText>
    <label>FTE Post - No. Mgrs/Dirs/Sr Officials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>