force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_No_Other_Role_Categories__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_No_Other_Role_Categories__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE post - No. of don&apos;t fit into the categories shown</description>
    <inlineHelpText>Of these FTE posts, how many don&apos;t fit into the categories shown?</inlineHelpText>
    <label>FTE Post - No. Other Role Categories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>