force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_No_Role_Unknown__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_No_Role_Unknown__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - No. of role not known</description>
    <inlineHelpText>Of these FTE posts, for how many is their role not known?</inlineHelpText>
    <label>FTE Post - No. Role Unknown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>