force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_No_Skilled_Trades_Occs__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_No_Skilled_Trades_Occs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - No. of skilled trades occupations (SOC Code 5)</description>
    <inlineHelpText>Of these FTE posts, how many are from skilled trades occupations? For example: skilled construction and building trades, finishing trades, electricians (SOC Code 5)</inlineHelpText>
    <label>FTE Post - No. Skilled Trades Occs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>