force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_Other_Role_Categories__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_Other_Role_Categories__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - % of don&apos;t fit into the categories shown</description>
    <inlineHelpText>Estimated percentage of don&apos;t fit into the categories shown directly involved in delivering Wave 3 project so far.</inlineHelpText>
    <label>FTE Post - % Other Role Categories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>