force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_Role_Unknown__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_Role_Unknown__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - % of role not known</description>
    <inlineHelpText>Estimated percentage of role not known directly involved in delivering Wave 3 project so far.</inlineHelpText>
    <label>FTE Post - % Role Unknown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>