force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Post_Skilled_Trades_Occs__c.field-meta.xml
<CustomField>
    <fullName>FTE_Post_Skilled_Trades_Occs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FTE posts - % of skilled trades occupations (SOC Code 5)</description>
    <inlineHelpText>Estimated percentage from skilled trades occupations directly involved in delivering Wave 3 project so far. For example: skilled construction and building trades, finishing trades, electricians (SOC Code 5)</inlineHelpText>
    <label>FTE Post - % Skilled Trades Occs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>