force-app/main/default/objects/Funding_Self_Evaluation__c/fields/FTE_Posts_No_joined_or_moved_Internal__c.field-meta.xml
<CustomField>
    <fullName>FTE_Posts_No_joined_or_moved_Internal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Of the retrofit-related FTE posts, how many have newly joined the organisation or moved internally from a role unrelated to retrofit during the Wave 3 project?</description>
    <inlineHelpText>Of the retrofit-related FTE posts, how many have newly joined the organisation or moved internally from a role unrelated to retrofit during the Wave 3 project?</inlineHelpText>
    <label>FTE Posts - No. Joined/Moved Internally</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>