force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the parent funding award the self evaluation form record relates to</description>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Funding Self Evaluations</relationshipLabel>
    <relationshipName>Funding_Self_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>