force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Grant_Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grant_Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact at GR who submitted the form</description>
    <label>Grant Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Self Evaluations</relationshipLabel>
    <relationshipName>Funding_Self_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>