force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Have_Resources_Products_Been_Shared__c.field-meta.xml
<CustomField>
    <fullName>Have_Resources_Products_Been_Shared__c</fullName>
    <description>Have you shared any resources or products with less experienced social housing providers, to support them to develop their retrofit capabilities during Wave 3?</description>
    <inlineHelpText>Have you shared any resources or products with less experienced social housing providers, to support them to develop their retrofit capabilities during Wave 3?</inlineHelpText>
    <label>Have Resources/Products Been Shared?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>