force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Nature_of_Newly_Recruited_Roles_if_any__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Newly_Recruited_Roles_if_any__c</fullName>
    <defaultValue>&quot;Enter Text&quot;</defaultValue>
    <description>What are the nature of newly recruited roles, if any?</description>
    <inlineHelpText>What are the nature of newly recruited roles, if any?</inlineHelpText>
    <label>Nature of Newly Recruited Roles, if any?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>