force-app/main/default/objects/Funding_Self_Evaluation__c/fields/No_of_Organisations_Supported__c.field-meta.xml
<CustomField>
    <fullName>No_of_Organisations_Supported__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many (if any) organisations have you supported to receive relevant retrofit accreditations during Wave 3? This could include contractors or other social housing providers, in or outside of a consortium.</description>
    <inlineHelpText>How many (if any) organisations have you supported to receive relevant retrofit accreditations during Wave 3? This could include contractors or other social housing providers, in or outside of a consortium.</inlineHelpText>
    <label>No. of Organisations Supported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>