force-app/main/default/objects/Funding_Self_Evaluation__c/fields/No_of_SME_Contractors_Used__c.field-meta.xml
<CustomField>
    <fullName>No_of_SME_Contractors_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many (if any) SME contractors have you used on your Wave 3 project?</description>
    <inlineHelpText>How many (if any) SME contractors have you used on your Wave 3 project?</inlineHelpText>
    <label>No. of SME Contractors Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>