force-app/main/default/objects/Funding_Self_Evaluation__c/fields/No_People_Fitting_Air_Ground_HP__c.field-meta.xml
<CustomField>
    <fullName>No_People_Fitting_Air_Ground_HP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of People accreditations received - Fitting Air Source or Ground Source Heat Pumps</description>
    <inlineHelpText>No. of People accreditations received - Fitting Air Source or Ground Source Heat Pumps</inlineHelpText>
    <label>People Accredited- Fitting Air/Ground HP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>