force-app/main/default/objects/Funding_Self_Evaluation__c/fields/No_People_Fitting_Solar_PV_Thermal__c.field-meta.xml
<CustomField>
    <fullName>No_People_Fitting_Solar_PV_Thermal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of People accreditations received - Fitting Solar PV or Solar Thermal</description>
    <inlineHelpText>No. of People accreditations received - Fitting Solar PV or Solar Thermal</inlineHelpText>
    <label>People Accredit-Fitting Solar PV/Thermal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>