force-app/main/default/objects/Funding_Self_Evaluation__c/fields/No_People_PAS_2035_Trustmark__c.field-meta.xml
<CustomField>
    <fullName>No_People_PAS_2035_Trustmark__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of People accreditations received - PAS 2035 / Trustmark</description>
    <inlineHelpText>No. of People accreditations received - PAS 2035 / Trustmark</inlineHelpText>
    <label>People Accredited- PAS 2035/Trustmark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>