force-app/main/default/objects/Funding_Self_Evaluation__c/fields/No_People_Retrofit_Assess_Design__c.field-meta.xml
<CustomField>
    <fullName>No_People_Retrofit_Assess_Design__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of People accreditations received - Retrofit assessment or design</description>
    <inlineHelpText>No. of People accreditations received - Retrofit assessment or design</inlineHelpText>
    <label>People Accredited-Retrofit Assess/Design</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>