force-app/main/default/objects/Funding_Self_Evaluation__c/fields/No_People_Retrofit_Project_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>No_People_Retrofit_Project_Mgmt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of People accreditations received - Retrofit project management</description>
    <inlineHelpText>No. of People accreditations received - Retrofit project management</inlineHelpText>
    <label>People Accredited- Retrofit Project Mgmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>