force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes for internal users to add to Self Evaluation</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>