force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Organisations_Supported__c.field-meta.xml
<CustomField>
    <fullName>Organisations_Supported__c</fullName>
    <defaultValue>&quot;Enter Text&quot;</defaultValue>
    <description>How many (if any) organisations have you supported to receive relevant retrofit accreditations during Wave 3? This could include contractors or other social housing providers, in or outside of a consortium.</description>
    <inlineHelpText>How many (if any) organisations have you supported to receive relevant retrofit accreditations during Wave 3? This could include contractors or other social housing providers, in or outside of a consortium.</inlineHelpText>
    <label>Organisations Supported</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>