force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Other_retrofit_related_roles__c.field-meta.xml
<CustomField>
    <fullName>Other_retrofit_related_roles__c</fullName>
    <defaultValue>&quot;Enter Text&quot;</defaultValue>
    <description>Details of other retrofit-related roles to any of the above</description>
    <inlineHelpText>Details of other retrofit-related roles to any of the above</inlineHelpText>
    <label>Other Retrofit-Related Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>