force-app/main/default/objects/Funding_Self_Evaluation__c/fields/Parent_Self_Evaluation_Form__c.field-meta.xml
<CustomField>
    <fullName>Parent_Self_Evaluation_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Self Evaluation Form</label>
    <referenceTo>Funding_Self_Evaluation__c</referenceTo>
    <relationshipLabel>Funding Self Evaluations</relationshipLabel>
    <relationshipName>Funding_Self_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>