force-app/main/default/objects/Funding_Self_Evaluation__c/fields/People_Trained_Another_Related_Accred__c.field-meta.xml
<CustomField>
    <fullName>People_Trained_Another_Related_Accred__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No of Staff that attended Another retrofit related accreditation training courses during Wave 3?</description>
    <inlineHelpText>No of Staff that attended Another retrofit related accreditation training courses during Wave 3?</inlineHelpText>
    <label>People Trained - Another Related Accred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>