force-app/main/default/objects/Funding_Self_Evaluation__c/fields/People_Trained_Fitting_Air_Ground_HP__c.field-meta.xml
<CustomField>
    <fullName>People_Trained_Fitting_Air_Ground_HP__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No of Staff that attended Fitting Air Source or Ground Source Heat Pumps training courses during Wave 3?</description>
    <inlineHelpText>No of Staff that attended Fitting Air Source or Ground Source Heat Pumps training courses during Wave 3?</inlineHelpText>
    <label>People Trained - Fitting Air/Ground HP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>