force-app/main/default/objects/Funding_Self_Evaluation__c/fields/People_Trained_Fitting_Insulation__c.field-meta.xml
<CustomField>
    <fullName>People_Trained_Fitting_Insulation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No of Staff that attended Fitting insulation (e.g. EWI, IWI) training courses during Wave 3?</description>
    <inlineHelpText>No of Staff that attended Fitting insulation (e.g. EWI, IWI) training courses during Wave 3?</inlineHelpText>
    <label>People Trained - Fitting Insulation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>