force-app/main/default/objects/Funding_Self_Evaluation__c/fields/People_Trained_Fitting_Other_Retrofit__c.field-meta.xml
<CustomField>
    <fullName>People_Trained_Fitting_Other_Retrofit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No of Staff that attended Fitting another retrofit product (e.g. double or triple glazing) training courses during Wave 3?</description>
    <inlineHelpText>No of Staff that attended Fitting another retrofit product (e.g. double or triple glazing) training courses during Wave 3?</inlineHelpText>
    <label>People Trained - Fitting Other Retrofit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>