force-app/main/default/objects/Funding_Self_Evaluation__c/fields/People_Trained_Fitting_Solar_PV_Therma__c.field-meta.xml
<CustomField>
    <fullName>People_Trained_Fitting_Solar_PV_Therma__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No of Staff that attended Fitting Solar PV or Solar Thermal training courses during Wave 3?</description>
    <inlineHelpText>No of Staff that attended Fitting Solar PV or Solar Thermal training courses during Wave 3?</inlineHelpText>
    <label>People Trained - Fitting Solar PV/Therma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>