force-app/main/default/objects/Funding_Self_Evaluation__c/fields/People_Trained_PAS_2035_Trustmark__c.field-meta.xml
<CustomField>
    <fullName>People_Trained_PAS_2035_Trustmark__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No of Staff that attended PAS 2035 / Trustmark training courses during Wave 3?</description>
    <inlineHelpText>No of Staff that attended PAS 2035 / Trustmark training courses during Wave 3?</inlineHelpText>
    <label>People Trained - PAS 2035/Trustmark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>